# logicshield

./: LICENSE  README.md  pyproject.toml
tests/: test_industries.py  test_logicshield.py
